# serializer version: 1
# name: test_switch[switch.tracker_device_id_123_buzzer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.tracker_device_id_123_buzzer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Buzzer',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Buzzer',
    'platform': 'tractive',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tracker_buzzer',
    'unique_id': 'pet_id_123_buzzer',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.tracker_device_id_123_buzzer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Tracker device_id_123 Buzzer',
    }),
    'context': <ANY>,
    'entity_id': 'switch.tracker_device_id_123_buzzer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[switch.tracker_device_id_123_led-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.tracker_device_id_123_led',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'LED',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'LED',
    'platform': 'tractive',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tracker_led',
    'unique_id': 'pet_id_123_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.tracker_device_id_123_led-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Tracker device_id_123 LED',
    }),
    'context': <ANY>,
    'entity_id': 'switch.tracker_device_id_123_led',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[switch.tracker_device_id_123_live_tracking-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.tracker_device_id_123_live_tracking',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Live tracking',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Live tracking',
    'platform': 'tractive',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'live_tracking',
    'unique_id': 'pet_id_123_live_tracking',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.tracker_device_id_123_live_tracking-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Tracker device_id_123 Live tracking',
    }),
    'context': <ANY>,
    'entity_id': 'switch.tracker_device_id_123_live_tracking',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
